2008-04-09  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.10.

2008-04-08  Andreas Matthies  <andreas.matthies@gmx.net>

	* arch/win32/msvc/config.h: Define HAVE_GETCWD.

	* arch/win32/*.rc: Removed all the tab-seperated shortcut
	markers. This is done dynamically now.

	* arch/win32/ui.c: Removed static shortcut stuff and call
	uikeyboard_create_accelerator_table and
	uikeyboard_menu_shortcuts instead.

	* arch/win32/uikeyboard.c: New function
	uikeyboard_menu_shortcuts.  uikeyboard_create_accelerator_table
	now remembers strings to add in the menu items.

2008-03-24  Andreas Boose  <viceteam@t-online.de>

	* Version 1.22.9.

	* arch/unix/gui/vsidui.c: Reversed `sid_submenu' change for
	now as it won't link otherwise.

2008-03-05  Andreas Matthies  <andreas.matthies@gmx.net>

	* core/ciacore.c (cia_do_set_int): Don't trigger an
	interrupt if ICR is read on the underrun cycle. This
	fixes ICR01 in Lorenz test suite.

2008-02-26  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* arch/unix/uimenu.h, arch/unix/videoarch.h,
	arch/unix/x11/x11menu.h, arch/unix/x11/x11ui.h,
	arch/unix/x11/xaw/uimenu.h,
	arch/unix/x11/xaw/widgets/Directory.c,
	arch/unix/x11/xaw/widgets/Directory.h, c128/Makefile.am,
	c128/z80vms.c, ioutil.c: Updated to include support for
	building for vax, alpha and ia64 vms.

	* core/ciatimer.h, gcr.c, gcr.h, vdc/vdc-mem.c, vdc/vdc.c,
	vdc/vdctypes.h: Got rid of some CR's.

2008-02-11  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* arch/unix/Makefile.am, arch/unix/archdep.c,
	arch/unix/gui/plus4ui.c, arch/unix/gui/uisound.c,
	arch/unix/gui/uited.c, arch/unix/gui/vic20ui.c,
	arch/unix/gui/vsidui.c, arch/unix/rs232.c,
	arch/unix/vms/config.h, arch/unix/vmstermios.h,
	arch/unix/x11/xaw/uiarch.h, network.c, rawfile.c,
	vdc/Makefile.am: Added preliminary OpenVMS support.

2008-02-11  Andreas Matthies  <andreas.matthies@gmx.net>

	* arch/win32/Makefile.am, arch.dsp, genmenuid.sh: Added new